<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:srcCompat="@mipmap/ic_launcher_logo_round"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:fontFamily="serif"
        android:text="@string/main_web"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="30sp"
        android:typeface="serif"
        android:paddingBottom="3dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#777"
        android:visibility="visible"
       />

    <TextView
        android:id="@+id/our_apps_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:paddingBottom="3dp"
        android:text="@string/our_apps_link"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="30sp"
        android:typeface="serif" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#777"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/send_message_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:paddingBottom="3dp"
        android:text="@string/send_message_us"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="30sp"
        android:typeface="serif" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#777"
        android:visibility="visible"
        />

    <TextView
        android:id="@+id/someone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="serif"
        android:paddingBottom="3dp"
        android:text="@string/policy_privacy_link"
        android:textAlignment="center"
        android:textColor="#673AB7"
        android:textSize="30sp"
        android:typeface="serif" />

</LinearLayout>